--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
   <string name="app_name">SimpleApp</string>
   <string name="text_comments">comments</string>
   <string name="text_loading">Loading..</string>
+  <string name="text_edit_post">edit</string>
+  <string name="text_delete_post">delete</string>
+  <string name="text_title_post_details">Post Details</string>
 </resources>
